--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web application for the next-Launcher system"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>next-Launcher</title>
-    
+    <!--
+      Theme Style (from react)
+    -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/themes/lara-light-cyan/theme.css">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   </head>
   <body>
